refactor wchat prepay